--- a/train.ipynb
+++ b/train.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "from data.dataset import NERDataset\n",
     "from models.networks import GlobalContextualDeepTransition\n",
     "import pytorch_lightning as pl\n",
-    "from tqdm.notebook import tqdm"
+    "from pytorch_lightning.callbacks import ModelCheckpoint"
    ]
   },
   {
@@ -30,41 +31,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(21387, 21388)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "max(data.wordIdx.values()), len(data.wordIdx)"
+    "with open('config.json', 'r') as file:\n",
+    "    kwargs = json.load(file)\n",
+    "model = GlobalContextualDeepTransition(**kwargs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numChars = 100\n",
-    "charEmbedding = 128\n",
-    "numWords = len(data.wordIdx)\n",
-    "wordEmbedding = 300\n",
-    "contextOutputUnits = 128\n",
-    "contextTransitionNumber = transitionNumber = 4\n",
-    "encoderUnits = 256\n",
-    "decoderUnits = 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,15 +52,20 @@
     }
    ],
    "source": [
-    "model = GlobalContextualDeepTransition(numChars, charEmbedding, numWords,\n",
-    "                     wordEmbedding, contextOutputUnits, contextTransitionNumber,\n",
-    "                        encoderUnits, decoderUnits, transitionNumber, data.numTags)\n",
-    "\n",
     "# add glove weights here\n",
     "model.init_weights(data.embeddingWeights)\n",
     "\n",
     "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\") # 6,788,797 but now 7,313,341 !"
+    "print(f\"Trainable parameters: {numParams:,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt = ModelCheckpoint(filepath='lightning_logs/checkpoint', period=1)"
    ]
   },
   {
@@ -109,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7360dd2e8fb4236b82b87a7377c8a38",
+       "model_id": "a74ee88a4fdb468b9378347096bae9b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +106,9 @@
      "output_type": "stream",
      "text": [
       "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pytorch_lightning\\utilities\\distributed.py:45: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  warnings.warn(*args, **kwargs)\n"
+      "  warnings.warn(*args, **kwargs)\n",
+      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:200: UserWarning: Please also save or load the state of the optimzer when saving or loading the scheduler.\n",
+      "  warnings.warn(SAVE_STATE_WARNING, UserWarning)\n"
      ]
     },
     {
@@ -147,9 +130,18 @@
     }
    ],
    "source": [
-    "trainer = pl.Trainer(gradient_clip_val=5., gpus=1, max_epochs=1)\n",
+    "trainer = pl.Trainer(#resume_from_checkpoint='lightning_logs/checkpoint-v0.ckpt',\n",
+    "                    gradient_clip_val=5., gpus=1,\n",
+    "                     max_epochs=2, checkpoint_callback=ckpt)\n",
     "trainer.fit(model, loader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
