--- a/test.ipynb
+++ b/test.ipynb
@@ -12,10 +12,11 @@
     "import torch\n",
     "import pytorch_lightning as pl\n",
     "from data.dataset import NERDataset\n",
-    "from models.utils import Namespace\n",
+    "from models.utils import Namespace, getSignal\n",
     "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence, pad_sequence, PackedSequence\n",
     "from models.networks import GlobalContextualDeepTransition\n",
-    "from pytorch_lightning.callbacks import ModelCheckpoint"
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "from torch.utils.data import DataLoader "
    ]
   },
   {
@@ -33,7 +34,8 @@
     "\n",
     "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "data.readTestFile(testSrc, testTrg)\n",
-    "loader = data.getLoader(1024, shuffle=False)"
+    "loader = data.getLoader(1024, shuffle=False)\n",
+    "# loader = DataLoader(data, collate_fn=data.pack_collate)"
    ]
   },
   {
@@ -63,64 +65,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "At any point, we store\n",
-    "    index\n",
-    "    timeTillNow\n",
-    "    pathFollowedTillNow\n",
-    "    hValue\n",
-    "for the sole purpose of backtracking\n",
-    "\n",
-    "We declare a matrix(batch_size, beam_size) of these to store info\n",
-    "\"\"\"\n",
-    "class Node:\n",
-    "    def __init__(self, path=[], value=0):\n",
-    "#         self.index  = index\n",
-    "#         self.time   = time\n",
-    "        self.path   = path\n",
-    "        self.value =  value\n",
-    "#         self.hiddenState = hiddenState\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.path)\n",
-    "\n",
-    "    def expandable(self, targetLen):\n",
-    "        return len(self.path) < targetLen\n",
-    "    \n",
-    "    def expandWithChoices(self, choices, logProbs):\n",
-    "        newNodes = []\n",
-    "        for choice, logProb in zip(choices, logProbs):\n",
-    "            newNodes.append( Node(self.path+[choice], self.value+logProb) )\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch = next(iter(loader))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    words, chars, charMask, targets = batch\n",
+    "    words, chars, charMask, targets = batch = next(iter(loader))\n",
     "    encoded, initHiddenState, initPrevTarget = model.encode(words, chars, charMask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pathSum(values, logProbs):\n",
+    "    \"\"\"\n",
+    "        Adds the prev sum to current logProbs\n",
+    "        to get the effective logprob\n",
+    "    \"\"\"\n",
+    "    # values is batch, beam\n",
+    "    values = torch.unsqueeze(values, -1) # batch, beam, 1\n",
+    "    values = values.repeat(1, 1, units)  # batch, beam, units\n",
+    "    values = values.permute(1,0,2)       # beam, batch, units\n",
+    "    values = torch.cat(list(values), -1) # batch, units * beam\n",
+    "    \n",
+    "    # logprobs is [batch, units*beam]\n",
+    "    ps = logProbs + values\n",
+    "    \n",
+    "    # ps is [batch, units*beam]\n",
+    "    return ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -135,12 +115,26 @@
     "batchSize = words.batch_sizes[0].item() # batchSize\n",
     "beamSize  = 4 # beamsize\n",
     "units = model.sequenceLabeller.decoderUnits\n",
-    "print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}\")"
+    "print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}\")\n",
+    "\n",
+    "lengths = torch.zeros(batchSize, dtype=torch.int)\n",
+    "live = list(range(batchSize))\n",
+    "dead = []\n",
+    "\n",
+    "for x in words.batch_sizes:\n",
+    "    lengths[:x] += 1\n",
+    "\n",
+    "\"\"\"\n",
+    "    values[i, j] contains the heuristic beam of the ith example. j in range(beamSize)\n",
+    "    paths [i, j] contains the corresponding paths\n",
+    "\"\"\"\n",
+    "values = torch.zeros(batchSize, beamSize) # we maintain a queue like tensor, each example has a queue of size beamSize\n",
+    "paths  = [ [list() for _ in range(beamSize)] for _ in range(batchSize) ] # one node in each queue as root of tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,203 +144,176 @@
     "start = 0\n",
     "encodedPages = []\n",
     "for pageLen in words.batch_sizes:\n",
-    "    page = encoded[start:start+pageLen].repeat(beamSize, 1)\n",
+    "    if start == 0:\n",
+    "        page = encoded[start:start+pageLen] # first page is not repeated\n",
+    "    else:\n",
+    "        page = encoded[start:start+pageLen].repeat(beamSize, 1)\n",
     "    encodedPages.append(page) # [e1, e2, e3, e1, e2, e3.. etc, repeated beamSize times]\n",
     "    start += pageLen\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[12, 13, 15, 14],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  7, 14, 13],\n",
+      "        [12, 13, 14,  7],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  7, 14, 13],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12,  9,  0,  7],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  0,  9,  7],\n",
+      "        [12,  7, 14,  0],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12,  7, 14,  0],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  9,  0, 14],\n",
+      "        [12,  7,  9,  0],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12,  9,  0, 14],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12,  7,  9,  0],\n",
+      "        [12, 13, 15, 16],\n",
+      "        [12,  7, 14,  3],\n",
+      "        [12, 14,  7,  3],\n",
+      "        [12,  0,  9, 14],\n",
+      "        [12, 13, 15, 16],\n",
+      "        [12,  9,  0,  7],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12,  9,  0,  7],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12, 13, 15, 14],\n",
+      "        [12, 13, 14, 15],\n",
+      "        [12,  7,  5,  9]])\n",
+      "torch.Size([188, 256])\n",
+      "torch.Size([47, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initial values are not repeated\n",
+    "hiddenState = initHiddenState\n",
+    "prevTarget = initPrevTarget\n",
     "\n",
     "\n",
+    "for t, b in enumerate(words.batch_sizes):\n",
+    "    \"\"\"Get the previous target and make the forward pass\"\"\"\n",
+    "    if t == 0:\n",
+    "        actualSize = b.item()\n",
+    "    else:\n",
+    "        actualSize = b.item() * beamSize\n",
+    "    prevTarget = prevTarget[:actualSize] + getSignal(1, units, t, model.device)\n",
+    "    with torch.no_grad():\n",
+    "        hiddenState, logits = model.sequenceLabeller.decode_once(\n",
+    "            encodedPages[t],\n",
+    "            prevTarget,\n",
+    "            hiddenState\n",
+    "        )\n",
+    "    logProbs = logitsToLogProbs(logits) # [b*beamSize, units] ie [l1, l2, l3, l1, l2, l3 ... numTag d vectors repeated]\n",
     "\n",
-    "# state = Namespace(\n",
-    "#     nodes = [[Node() for _ in range(beamSize)] for _ in range(batchSize)] # only beamSize choices to backtrack\n",
-    "#     encodedPages = encodedPages\n",
-    "#     hiddenState = [torch.zeros(page.shape) for page in ]\n",
-    "# )\n",
+    "    \"\"\"Add the logProbs to the current paths to get newPathSums\"\"\"\n",
+    "    if t == 0:\n",
+    "        ps = logProbs\n",
+    "    else:\n",
+    "        logProbs = logProbs.reshape((beamSize, b.item(), units)) # now becomes [[l1, l2, l3], [l1, l2, l3], [l1, l2, l3]...]\n",
+    "        logProbs = torch.cat(list(logProbs), dim=-1) # [l1l1l1..., l2l2l2..., l3l3l3...]\n",
+    "        ps = pathSum(values, logProbs)\n",
     "\n",
+    "    \"\"\"Filter the top beam pathsums and extend the paths\"\"\"\n",
+    "    values, indices = ps.topk(dim=-1, k=beamSize) # values is [batch, beam]\n",
+    "\n",
+    "    # indices represent max over arrays of size units * beam\n",
+    "    # Their parent must be at idx/units in the queue.\n",
+    "    parents = indices // units\n",
+    "\n",
+    "    # the child is the actual index\n",
+    "    children = indices % units\n",
+    "\n",
+    "    \"\"\"Extend paths using new values\"\"\"\n",
+    "    numFinished = 0\n",
+    "    for qidx, valBeam, childbeam, parentBeam in zip(live, values, children, parents):\n",
+    "        \"\"\"\n",
+    "            Narrow our sight to each example:\n",
+    "                At qidx, extend the path of parentBeam[i] with childBeam[i]\n",
+    "                You will get beam no. of new paths.\n",
+    "                This is your new path beam.\n",
+    "        \"\"\"\n",
+    "        newQueue = []\n",
+    "        for v, c, p in zip(valBeam, childbeam, parentBeam):\n",
+    "            oldPath = paths[qidx][p]\n",
+    "            newPath = oldPath + [c.item()]\n",
+    "            newQueue.append(newPath)\n",
+    "        paths[qidx] = newQueue\n",
+    "\n",
+    "        \"\"\"Mark completed if the lenghts of the paths match the word count\"\"\"\n",
+    "        if len(newQueue[0]) == lengths[qidx]:\n",
+    "            numFinished += 1\n",
+    "            dead.append(qidx)\n",
+    "\n",
+    "    \"\"\"If an example is done, it has to be at the end of the live array\"\"\"\n",
+    "    for _ in range(numFinished):\n",
+    "        live.pop()\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Rearrange the prevTarget and hiddenState using indices\n",
+    "        Note that values = torch.gather(ps, -1, indices) is a way to go from [batch, units*beam] and [batch, beam]\n",
+    "\n",
+    "        * ps -> [batch, units*beam] and values -> [batch, beam]\n",
+    "    \"\"\"\n",
+    "    print(indices) \n",
+    "    prevTarget = model.sequenceLabeller.targetEmbedding(indices.reshape(-1))\n",
+    "#     hiddenState = torch.gather(hiddenState, -1, indices)\n",
+    "    print(prevTarget.shape)\n",
+    "    print(hiddenState.shape)\n",
+    "    break\n",
     "# print(*[page.shape for page in encodedPages], sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial\n",
-      "tensor([[ 0.,  1.,  2.,  3.],\n",
-      "        [ 4.,  5.,  6.,  7.],\n",
-      "        [ 8.,  9., 10., 11.]])\n",
-      "Repeated\n",
-      "tensor([[ 0.,  1.,  2.,  3.],\n",
-      "        [ 4.,  5.,  6.,  7.],\n",
-      "        [ 8.,  9., 10., 11.],\n",
-      "        [ 0.,  1.,  2.,  3.],\n",
-      "        [ 4.,  5.,  6.,  7.],\n",
-      "        [ 8.,  9., 10., 11.]])\n",
-      "Reshaped\n",
-      "tensor([[[ 0.1000,  1.1000,  1.9000,  2.9000],\n",
-      "         [ 3.9000,  5.1000,  5.9000,  6.9000],\n",
-      "         [ 7.9000,  8.9000,  9.9000, 10.9000]],\n",
-      "\n",
-      "        [[ 0.0000,  1.0000,  2.0000,  3.0000],\n",
-      "         [ 4.0000,  5.0000,  6.0000,  7.0000],\n",
-      "         [ 8.0000,  9.0000, 10.0000, 11.0000]]])\n",
-      "Maximum\n",
-      "tensor([[ 0.1000,  1.1000,  2.0000,  3.0000],\n",
-      "        [ 4.0000,  5.1000,  6.0000,  7.0000],\n",
-      "        [ 8.0000,  9.0000, 10.0000, 11.0000]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Initial\")\n",
-    "x = torch.arange(12, dtype=torch.float).reshape((3, 4))\n",
-    "print(x)\n",
-    "\n",
-    "print(\"Repeated\")\n",
-    "x = x.repeat(2, 1)\n",
-    "print(x)\n",
-    "\n",
-    "print(\"Reshaped\")\n",
-    "x = x.reshape(2,3,4)\n",
-    "x[0] += 0.2 * torch.randint(2, size=(3, 4)) - 0.1\n",
-    "print(x)\n",
-    "\n",
-    "print(\"Maximum\")\n",
-    "print(x.max(axis=0)[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rnnPlusWarmupDecay(learningRate=8e-3, minValue=5e-6):\n",
-    "    def subroutine(step):\n",
-    "        \"\"\"\n",
-    "            if the resultant lr ( = decay * learning_rate) is very small,\n",
-    "            then return decay such that resultant lr becomes minvalue\n",
-    "            \n",
-    "            that is decay * learning_rate >= minvalue\n",
-    "            so decay can never be less than minValue/learning_rate\n",
-    "            therefore we max it with the least val\n",
-    "            decay = max(decay, minValue/learning_rate)\n",
-    "        \"\"\"\n",
-    "        exp = (1000 - step) / 3000\n",
-    "        decay = min(1, 2 ** exp)\n",
-    "        return max(decay, minValue/learningRate)\n",
-    "    return subroutine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w1 = torch.nn.Parameter(torch.randn(3, 4))\n",
-    "w2 = torch.nn.Parameter(torch.randn(3, 4))\n",
-    "\n",
-    "optim = torch.optim.Adam([w1, w2], lr=0.1)\n",
-    "sched = torch.optim.lr_scheduler.LambdaLR(optim, rnnPlusWarmupDecay())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.015749013123685915\n",
-      "500 0.01403077560386716\n",
-      "1000 0.0125\n",
-      "1500 0.011136233976754242\n",
-      "2000 0.009921256574801246\n",
-      "2500 0.008838834764831846\n",
-      "3000 0.007874506561842957\n",
-      "3500 0.00701538780193358\n",
-      "4000 0.00625\n",
-      "4500 0.00556811698837712\n",
-      "5000 0.004960628287400625\n",
-      "5500 0.004419417382415923\n",
-      "6000 0.003937253280921478\n",
-      "6500 0.0035076939009667917\n",
-      "7000 0.003125\n",
-      "7500 0.00278405849418856\n",
-      "8000 0.0024803141437003125\n",
-      "8500 0.0022097086912079614\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(9000):\n",
-    "    loss = w1*w2\n",
-    "    loss.sum().backward()\n",
-    "    if i%500 == 0:\n",
-    "        lr = optim.param_groups[0]['lr']\n",
-    "        print(i, lr)\n",
-    "    \n",
-    "    optim.step()\n",
-    "    sched.step()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.008"
+       "tensor([1., 2., 3., 4., 5., 6.])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sched"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'params': [Parameter containing:\n",
-       "  tensor([[-1.4074, -2.0451, -1.9878, -0.7623],\n",
-       "          [-1.5438, -0.5121,  0.6965, -0.7930],\n",
-       "          [ 0.0273,  0.6387,  0.3439,  0.0112]], requires_grad=True),\n",
-       "  Parameter containing:\n",
-       "  tensor([[-1.3529,  0.6924,  0.5541,  0.8220],\n",
-       "          [ 0.5065, -1.0960, -0.2883, -0.5091],\n",
-       "          [ 1.3843,  1.2723, -0.3518, -1.1477]], requires_grad=True)],\n",
-       " 'lr': 9.090909090909092e-05,\n",
-       " 'betas': (0.9, 0.999),\n",
-       " 'eps': 1e-08,\n",
-       " 'weight_decay': 0,\n",
-       " 'amsgrad': False,\n",
-       " 'initial_lr': 0.001}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "optim.param_groups[0]"
+    "torch.Tensor([\n",
+    "    [1,2,3],\n",
+    "    [4, 5, 6]\n",
+    "]).reshape(-1)"
    ]
   },
   {
@@ -354,7 +321,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "batchSize = 5\n",
+    "beamSize = 4\n",
+    "\n",
+    "hs = torch.randn(batchSize, 256)\n"
+   ]
   }
  ],
  "metadata": {
