beam search template done

--- a/test.ipynb
+++ b/test.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prevCheckpointPath = 'lightning_logs/checkpoint-v0.ckpt'\n",
+    "prevCheckpointPath = 'lightning_logs/ckpt-epoch=109-train_loss=0.63.ckpt'\n",
     "\n",
     "with open('config.json', 'r') as file:\n",
     "    kwargs = json.load(file)\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "    \"\"\"\n",
     "    # values is batch, beam\n",
     "    values = torch.unsqueeze(values, -1) # batch, beam, 1\n",
-    "    values = values.repeat(1, 1, units)  # batch, beam, units\n",
+    "    values = values.repeat(1, 1, tags)  # batch, beam, units\n",
     "    values = values.permute(1,0,2)       # beam, batch, units\n",
     "    values = torch.cat(list(values), -1) # batch, units * beam\n",
     "    \n",
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batchSize=47, beamSize=4, units=256\n"
+      "batchSize=47, beamSize=4, units=256, tags=17\n"
      ]
     }
    ],
@@ -115,11 +115,11 @@
     "batchSize = words.batch_sizes[0].item() # batchSize\n",
     "beamSize  = 4 # beamsize\n",
     "units = model.sequenceLabeller.decoderUnits\n",
-    "print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}\")\n",
+    "tags = model.numTags\n",
+    "\n",
+    "print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}, tags={tags}\")\n",
     "\n",
     "lengths = torch.zeros(batchSize, dtype=torch.int)\n",
-    "live = list(range(batchSize))\n",
-    "dead = []\n",
     "\n",
     "for x in words.batch_sizes:\n",
     "    lengths[:x] += 1\n",
@@ -129,15 +129,7 @@
     "    paths [i, j] contains the corresponding paths\n",
     "\"\"\"\n",
     "values = torch.zeros(batchSize, beamSize) # we maintain a queue like tensor, each example has a queue of size beamSize\n",
-    "paths  = [ [list() for _ in range(beamSize)] for _ in range(batchSize) ] # one node in each queue as root of tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "paths  = [ [list() for _ in range(beamSize)] for _ in range(batchSize) ] # one node in each queue as root of tree\n",
     "\"\"\"Init nodes in a matrix for each beam and \"\"\"\n",
     "\n",
     "# encoded pages\n",
@@ -150,71 +142,10 @@
     "        page = encoded[start:start+pageLen].repeat(beamSize, 1)\n",
     "    encodedPages.append(page) # [e1, e2, e3, e1, e2, e3.. etc, repeated beamSize times]\n",
     "    start += pageLen\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[12, 13, 15, 14],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  7, 14, 13],\n",
-      "        [12, 13, 14,  7],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  7, 14, 13],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12,  9,  0,  7],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  0,  9,  7],\n",
-      "        [12,  7, 14,  0],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12,  7, 14,  0],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  9,  0, 14],\n",
-      "        [12,  7,  9,  0],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12,  9,  0, 14],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12,  7,  9,  0],\n",
-      "        [12, 13, 15, 16],\n",
-      "        [12,  7, 14,  3],\n",
-      "        [12, 14,  7,  3],\n",
-      "        [12,  0,  9, 14],\n",
-      "        [12, 13, 15, 16],\n",
-      "        [12,  9,  0,  7],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12,  9,  0,  7],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12, 13, 15, 14],\n",
-      "        [12, 13, 14, 15],\n",
-      "        [12,  7,  5,  9]])\n",
-      "torch.Size([188, 256])\n",
-      "torch.Size([47, 256])\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "live = list(range(batchSize))\n",
+    "dead = []\n",
+    "\n",
     "# initial values are not repeated\n",
     "hiddenState = initHiddenState\n",
     "prevTarget = initPrevTarget\n",
@@ -223,9 +154,9 @@
     "for t, b in enumerate(words.batch_sizes):\n",
     "    \"\"\"Get the previous target and make the forward pass\"\"\"\n",
     "    if t == 0:\n",
-    "        actualSize = b.item()\n",
+    "        actualSize = b\n",
     "    else:\n",
-    "        actualSize = b.item() * beamSize\n",
+    "        actualSize = b * beamSize\n",
     "    prevTarget = prevTarget[:actualSize] + getSignal(1, units, t, model.device)\n",
     "    with torch.no_grad():\n",
     "        hiddenState, logits = model.sequenceLabeller.decode_once(\n",
@@ -239,19 +170,19 @@
     "    if t == 0:\n",
     "        ps = logProbs\n",
     "    else:\n",
-    "        logProbs = logProbs.reshape((beamSize, b.item(), units)) # now becomes [[l1, l2, l3], [l1, l2, l3], [l1, l2, l3]...]\n",
+    "        logProbs = logProbs.reshape((beamSize, b, tags)) # now becomes [[l1, l2, l3], [l1, l2, l3], [l1, l2, l3]...]\n",
     "        logProbs = torch.cat(list(logProbs), dim=-1) # [l1l1l1..., l2l2l2..., l3l3l3...]\n",
-    "        ps = pathSum(values, logProbs)\n",
+    "        ps = pathSum(values[:b], logProbs)\n",
     "\n",
     "    \"\"\"Filter the top beam pathsums and extend the paths\"\"\"\n",
-    "    values, indices = ps.topk(dim=-1, k=beamSize) # values is [batch, beam]\n",
+    "    values[:b], indices = ps.topk(dim=-1, k=beamSize) # values is [batch, beam]\n",
     "\n",
     "    # indices represent max over arrays of size units * beam\n",
     "    # Their parent must be at idx/units in the queue.\n",
-    "    parents = indices // units\n",
+    "    parents = indices // tags\n",
     "\n",
     "    # the child is the actual index\n",
-    "    children = indices % units\n",
+    "    children = indices % tags\n",
     "\n",
     "    \"\"\"Extend paths using new values\"\"\"\n",
     "    numFinished = 0\n",
@@ -273,7 +204,8 @@
     "        if len(newQueue[0]) == lengths[qidx]:\n",
     "            numFinished += 1\n",
     "            dead.append(qidx)\n",
-    "\n",
+    "    \n",
+    "#     print(*paths, sep='\\n')\n",
     "    \"\"\"If an example is done, it has to be at the end of the live array\"\"\"\n",
     "    for _ in range(numFinished):\n",
     "        live.pop()\n",
@@ -283,49 +215,60 @@
     "        Note that values = torch.gather(ps, -1, indices) is a way to go from [batch, units*beam] and [batch, beam]\n",
     "\n",
     "        * ps -> [batch, units*beam] and values -> [batch, beam]\n",
+    "        use the same flow as logProbs -> ps -> values \n",
     "    \"\"\"\n",
-    "    print(indices) \n",
-    "    prevTarget = model.sequenceLabeller.targetEmbedding(indices.reshape(-1))\n",
-    "#     hiddenState = torch.gather(hiddenState, -1, indices)\n",
-    "    print(prevTarget.shape)\n",
-    "    print(hiddenState.shape)\n",
-    "    break\n",
+    "    # remove dead sequences\n",
+    "    children = children[:b-numFinished]\n",
+    "    parents = parents[:b-numFinished]\n",
+    "    prevTarget = model.sequenceLabeller.targetEmbedding(children.T.reshape(-1))\n",
+    "    \n",
+    "    if t == 0:\n",
+    "        hiddenState = torch.unsqueeze(hiddenState, 0)\n",
+    "    else:\n",
+    "        hiddenState = hiddenState.reshape((beamSize, b, -1))\n",
+    "    unfolded = parents.T.reshape(-1)\n",
+    "    runner = torch.arange(b-numFinished).repeat(beamSize)\n",
+    "    hiddenState = hiddenState[unfolded, runner]\n",
+    "\n",
+    "#     print(\"Hidden State shape\", hiddenState.shape)\n",
+    "#     print(\"prevTarget shape\", prevTarget.shape)\n",
     "# print(*[page.shape for page in encodedPages], sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1., 2., 3., 4., 5., 6.])"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.Tensor([\n",
-    "    [1,2,3],\n",
-    "    [4, 5, 6]\n",
-    "]).reshape(-1)"
+    "# decode results\n",
+    "results = [x[0] for x in paths]\n",
+    "unsorted = []\n",
+    "for i in words.unsorted_indices:\n",
+    "    unsorted.append([data.tags[j] for j in results[i]] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['O', 'O', 'S-MISC', 'O', 'O', 'O', 'O', 'O', 'B-MISC', 'E-MISC', 'O', 'O', 'O', 'O', 'O', 'O', 'O']\n",
+      "['O', 'O', 'S-MISC', 'O', 'O', 'O', 'O', 'O', 'B-MISC', 'E-MISC', 'O', 'O', 'O', 'O', 'O', 'O', 'O']\n"
+     ]
+    }
+   ],
    "source": [
-    "batchSize = 5\n",
-    "beamSize = 4\n",
+    "idx = 7\n",
+    "actual = [data.tags[j] for j in data[idx][2]] \n",
+    "predicted = unsorted[idx]\n",
     "\n",
-    "hs = torch.randn(batchSize, 256)\n"
+    "print(actual)\n",
+    "print(predicted)"
    ]
   }
  ],
